Reorganized App.js and styles

--- a/src/App.css
+++ b/src/App.css
@@ -1,35 +1,99 @@
-.app-header {
+html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,footer,header,nav,section{display:block}h1{font-size:2em;margin:.67em 0}figcaption,figure,main{display:block}figure{margin:1em 40px}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent;-webkit-text-decoration-skip:objects}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:inherit}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}dfn{font-style:italic}mark{background-color:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}audio,video{display:inline-block}audio:not([controls]){display:none;height:0}img{border-style:none}svg:not(:root){overflow:hidden}button,input,optgroup,select,textarea{font-family:sans-serif;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}button,html [type=button],[type=reset],[type=submit]{-webkit-appearance:button}button::-moz-focus-inner,[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner{border-style:none;padding:0}button:-moz-focusring,[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{display:inline-block;vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-cancel-button,[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details,menu{display:block}summary{display:list-item}canvas{display:inline-block}template{display:none}[hidden]{display:none}
+
+.clearfix:after {visibility: hidden; display: block; font-size: 0; content: ''; clear: both; height: 0; }
+
+html { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;}
+
+*, *:before, *:after {box-sizing: inherit}
+
+.sr-only { position: absolute; width: 1px; height: 1px; margin: -1px; border: 0; padding: 0; white-space: nowrap; clip-path: inset(100%); clip: rect(0 0 0 0); overflow: hidden;}
+
+/* GENERIC OVERRIDES */
+body,
+ul,
+li,
+h1,
+h2,
+h3,
+input, 
+button, 
+p {
+    margin: 0;
+    padding: 0;
+}
+
+html {
+    font-size: 62.5%;
+    scroll-behavior: smooth;
+}
+
+/* removes the list bullets */
+ul {list-style: none;} 
+
+/* removes default syling from links */
+a {
+	color: inherit;
+    text-decoration: none;
+    border-bottom: 1px solid transparent;
+    transition: all 0.3s; 
+} 
+
+body {
+  background-color: #1a1d35; 
+  font-size: 1.6rem; 
+  color: #dadada;
+  min-width: 320px;
+  font-family: 'Open Sans', sans-serif;
+}
+
+header {
   height: 70px;
-  background-color: #0076ff;
+  background-color: #020203; 
   display: flex;
   align-items: center;
   margin-bottom: 16px;
   color: #FFF;
+} 
+
+h1 {
+  margin-left: 16px; 
+  font-size: 2rem;
+  letter-spacing: 0.1rem;
 }
 
-.app-header img {
-  height: 40px;
-  margin-left: 16px;
-  color: mistyrose;
+main {  
+  padding: 50px;
+} 
+
+section, table {
+  margin: 0 auto;
 }
 
-.app-header-title {
-  margin-left: 16px;
-  font-size: 1.2em;
+section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
-
-.app-content { margin: 16px; } 
 
 /* Item Input Form Styles */
 input, select {
-  border-radius: 5px;
-  border: 1px solid #c2c2c2;
-  width: 150px;
-  font-size: 1.2rem;
   font-family: inherit;
+  border-radius: 5px;
+  border: 1px solid transparent;
+  width: 150px; 
+  font-family: inherit;
+  color: inherit;
+  background-color: #2d293f; 
+} 
+
+input { 
+  padding: 10px;
 }
 
-input { padding: 10px; }
+input:focus {
+  border: 1px solid #ffffff;
+}
 
 .inputForm {
   margin-top: 50px;
@@ -39,13 +103,17 @@ input { padding: 10px; }
 }
 
 .inputForm div {
-  margin-right: 30px;
+  margin-right: 20px;
   position: relative;
 }
 
 .inputForm label {
   position: absolute;
-  top: -20px;
+  top: -25px;
+  color: white;
+  font-size: inherit;
+  font-size: 1.4rem;
+  font-family: inherit;
 } 
 
 /* Hide increment arrows in Firefox */ 
@@ -60,17 +128,39 @@ input::-webkit-inner-spin-button {
 /* Filter by Category */
 .filterSelect label {margin-right: 10px;}
 
-select { height: 40px; }
+select { 
+  height: 40px;
+  cursor: pointer;
+} 
+
+.add {
+  background-color: #ff82a7;
+  font-family: inherit;
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 1.4rem; 
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+  border: none;
+  cursor: pointer;
+}
 
 /* Table styles */
 table {
   margin-top: 20px;  
-  border-collapse: collapse; 
+  border-collapse: collapse;  
+  background-color: #25253d; 
+  box-shadow: 3px 3px 8px 2px rgba(0, 0, 0, 0.199);
 }
 
 table, th, td {
-  border: 1px solid #bbbbbb;
   text-transform: capitalize;
+}
+
+th {
+  text-align: left;
+  font-size: 1.4rem; 
 }
 
 th:not(:last-of-type) {
@@ -80,9 +170,22 @@ th:not(:last-of-type) {
   width: calc(100% / 5);
 }  
 
-th {padding: 10px;}
-td {padding: 5px 10px;}
+th {padding: 15px;}
+td {padding: 12px 15px;}
 
-.tableHeadings { background-color: #dfdfdf;} 
+.category span {
+  font-size: 1.3rem;
+  background-color: #ffc2d4;
+  padding: 3px 10px;
+  border-radius: 30px;
+  color: #000000;
+}
 
-.placeholderRow {height: 40px;}
+.price {font-weight: 600;}
+
+.tableHeadings { 
+  background-color: #0f0f16; 
+  color: #ff82a7;
+} 
+
+.placeholderRow {height: 50px;}
