--- a/src/index.css
+++ b/src/index.css
@@ -3,5 +3,5 @@ html, body
   margin: 0;
   width: 100%;
   height: 100%;
-  font-family: 'Raleway', Arial, Helvetica, sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
