--- a/src/App.css
+++ b/src/App.css
@@ -203,13 +203,23 @@ tr:not(:first-of-type) {
 
 th, td {padding: 15px;} 
 
-.category span {
-  font-size: 1.3rem;
-  background-color: #ffb5b5;
-  margin-top: 5px;
-  display: inline-block;
-  padding: 0px 10px;
-  border-radius: 30px; 
+.category {
+  width: 50px;
+}
+
+.category div {
+  border-radius: 50%;
+  height: 40px;
+  width: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center; 
+  color: rgb(43, 43, 43);
+  background-color: rgb(236, 236, 236);
+} 
+
+.category svg {
+  transform: scale(1.4);
 } 
 
 table button {
@@ -232,7 +242,7 @@ table button {
   line-height: 2.2rem;
 }
 
-.tableHeadings { 
+thead { 
   background-color: #252525; 
   color: #8c8eff;
 } 
@@ -245,12 +255,12 @@ table button {
 }
 
 .summary h2 {
-  font-size: 1.4rem;
-  text-transform: uppercase;
+  font-size: 1.6rem; 
   margin-bottom: 5px;
 }
 
 .summary span {
+  font-weight: 700;
   color: #676aff;
   font-size: 2.4rem;  
 }
