Wrote function to  formate date string

--- a/src/App.css
+++ b/src/App.css
@@ -82,8 +82,8 @@ main {
 /* Item Input Form Styles */
 input, select {
   font-family: inherit; 
-  color: inherit; 
-  border: 1px solid black;  
+  color: inherit;  
+  border: none;
 }  
 
 select { cursor: pointer; } 
@@ -94,6 +94,7 @@ label {
   font-family: inherit; 
   display: block;
   margin-bottom: 5px;
+  font-weight: 600;
 } 
 
 /* Hide increment arrows in Firefox */ 
@@ -109,12 +110,7 @@ input::-webkit-inner-spin-button {
 .inputForm {  
   display: flex;
   flex-wrap: wrap;
-  align-items: flex-end;
-  /* flex-direction: column;   */
-  /* max-height: 550px;
-  min-width: 280px; */
-  /* width: 40%;
-  margin-right: 50px;    */ 
+  align-items: flex-end; 
   background-color:#ffffff; 
 } 
 
@@ -124,6 +120,8 @@ input::-webkit-inner-spin-button {
   height: 45px; 
   margin-bottom: 10px;
   width: 100%;
+  background-color: rgb(241, 242, 250);
+  color: rgb(110, 109, 134);
 }
 
 .inputForm div {
@@ -143,7 +141,7 @@ input::-webkit-inner-spin-button {
 
 .filterSelect select {
   width: 180px; 
-  padding: 5px;
+  padding: 5px; 
 }
 
 .filterSelect > div {
@@ -153,16 +151,12 @@ input::-webkit-inner-spin-button {
 } 
 
 .add {
-  background-color: #676aff;
-  font-family: inherit;
-  font-size: 2rem;
-  text-transform: uppercase;  
+  background-color: #676aff; 
+  font-size: 2rem; 
   color: white;
-  padding: 10px;
-  border: none;
+  padding: 10px; 
   height: 45px;
-  margin-bottom: 10px;
-  cursor: pointer;
+  margin-bottom: 10px; 
 }  
 
 /* Table styles */ 
@@ -174,14 +168,7 @@ table {
   border-radius: 5px;
   background-color: white;
   overflow: hidden; 
-} 
-
-caption {
-  text-align: left;
-  font-weight: 600;
-  font-size: 2rem;
-  margin-bottom: 10px;
-}
+}  
 
 th { 
   text-align: left;
@@ -214,8 +201,8 @@ th, td {padding: 15px;}
   display: flex;
   justify-content: center;
   align-items: center; 
-  color: rgb(43, 43, 43);
-  background-color: rgb(236, 236, 236);
+  color: #2b2b2b;
+  background-color: #ececec;
 } 
 
 .category svg {
@@ -259,11 +246,12 @@ thead {
   margin-bottom: 5px;
 }
 
-.summary span {
-  font-weight: 700;
+.summary span { 
   color: #676aff;
-  font-size: 2.4rem;  
+  font-size: 2.6rem;  
 }
+
+.hidden {visibility: hidden;}
 
 .checkbox {
   height: 20px;
