--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,footer,header,nav,section{display:block}h1{font-size:2em;margin:.67em 0}figcaption,figure,main{display:block}figure{margin:1em 40px}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent;-webkit-text-decoration-skip:objects}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:inherit}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}dfn{font-style:italic}mark{background-color:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}audio,video{display:inline-block}audio:not([controls]){display:none;height:0}img{border-style:none}svg:not(:root){overflow:hidden}button,input,optgroup,select,textarea{font-family:sans-serif;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}button,html [type=button],[type=reset],[type=submit]{-webkit-appearance:button}button::-moz-focus-inner,[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner{border-style:none;padding:0}button:-moz-focusring,[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{display:inline-block;vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-cancel-button,[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details,menu{display:block}summary{display:list-item}canvas{display:inline-block}template{display:none}[hidden]{display:none}
+html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,footer,header,nav,section{display:block}h1{font-size:2em;margin:.67em 0}figcaption,figure,main{display:block}figure{margin:1em 40px}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent;-webkit-text-decoration-skip:objects}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:inherit}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}dfn{font-style:italic}mark{background-color:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}audio,video{display:inline-block}audio:not([controls]){display:none;height:0}img{border-style:none}svg:not(:root){overflow:hidden}button,input,optgroup,select,textarea{font-family:sans-serif;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}button,html [type=button],[type=reset],[type=submit]{-webkit-appearance:button}button::-moz-focus-inner,[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner{border-style:none;padding:0}button:-moz-focusring,[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring{outline:1px dotted}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{display:inline-block;vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-cancel-button,[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details,menu{display:block}summary{display:list-item}canvas{display:inline-block}template{display:none}[hidden]{display:none}
 
 .clearfix:after {visibility: hidden; display: block; font-size: 0; content: ''; clear: both; height: 0; }
 
@@ -8,7 +8,7 @@ html { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: 
 
 .sr-only { position: absolute; width: 1px; height: 1px; margin: -1px; border: 0; padding: 0; white-space: nowrap; clip-path: inset(100%); clip: rect(0 0 0 0); overflow: hidden;}
 
-/* GENERIC OVERRIDES */
+/* GENERIC OVERRIDES */ 
 body,
 ul,
 li,
@@ -46,24 +46,7 @@ button {
 }
 
 table, th, td,
-select, option { text-transform: capitalize; }
-
-body {  
-  font-size: 1.6rem; 
-  color: #1d1d1d;
-  min-width: 320px;
-  font-family: 'Open Sans', sans-serif;
-  background-color: rgb(241, 241, 241);
-}
-
-header {   
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: white;
-  padding: 30px 20px 20px 20px; 
-  box-shadow: 5px 5px 3px 2px rgba(173, 173, 173, 0.1);
-} 
+select, option { text-transform: capitalize; } 
 
 .wrapper {
   margin: 0 auto;
@@ -73,11 +56,7 @@ header {
 
 h1, h2 { 
   font-size: 2rem;
-}  
-
-main {
-  /* display: flex;    */
-}  
+}   
 
 /* Item Input Form Styles */
 input, select {
@@ -107,49 +86,6 @@ input::-webkit-inner-spin-button {
   margin: 0;
 }
 
-.inputForm {  
-  display: flex;
-  flex-wrap: wrap;
-  align-items: flex-end; 
-  background-color:#ffffff; 
-} 
-
-.inputForm input, 
-.inputForm select {
-  padding: 10px;
-  height: 45px; 
-  margin-bottom: 10px;
-  width: 100%;
-  background-color: rgb(241, 242, 250);
-  color: rgb(110, 109, 134);
-}
-
-.inputForm div {
-  margin-right: 20px; 
-  position: relative;  
-  overflow-y: auto;
-}
-
-/* Filter by Category */ 
-.filterSelect { 
-  display: flex;
-  margin-top: 50px;
-  margin-bottom: 10px;
-}
-
-.filterSelect label {margin-right: 10px;} 
-
-.filterSelect select {
-  width: 180px; 
-  padding: 5px; 
-}
-
-.filterSelect > div {
-  position: relative;
-  display: inline-block;
-  margin-right: 30px;
-} 
-
 .add {
   background-color: #676aff; 
   font-size: 2rem; 
@@ -159,40 +95,7 @@ input::-webkit-inner-spin-button {
   margin-bottom: 10px; 
 }  
 
-/* Table styles */ 
-table {  
-  width: 100%;
-  margin-top: 30px;  
-  border-collapse: collapse;  
-  box-shadow: 0px 0px 5px 2px rgba(129, 129, 129, 0.116);
-  border-radius: 5px;
-  background-color: white;
-  overflow: hidden; 
-}  
-
-th { 
-  text-align: left;
-  font-size: 1.5rem; 
-}
-
-th:not(:last-of-type) { 
-  overflow: auto; 
-  width: calc((100% - 50px)/ 3);
-}  
-
-th:last-of-type { 
-  max-width: 70px;
-} 
-
-tr:not(:first-of-type) {
-  border-top: 1px solid rgba(105, 105, 105, 0.158);
-}
-
-th, td {padding: 15px;} 
-
-.category {
-  width: 50px;
-}
+.category { width: 50px; }
 
 .category div {
   border-radius: 50%;
@@ -208,10 +111,6 @@ th, td {padding: 15px;}
 .category svg {
   transform: scale(1.4);
 } 
-
-table button {
-  color: white;  
-}
 
 .name {
   font-size: 1.8rem;
@@ -229,11 +128,6 @@ table button {
   line-height: 2.2rem;
 }
 
-thead { 
-  background-color: #252525; 
-  color: #8c8eff;
-} 
- 
 .summary {
   font-weight: 600;
   text-align: center;  
@@ -270,3 +164,6 @@ thead {
   margin: 0 auto;
   display: block;
 }
+
+/* Light Mode/ Dark Mode Toggle */ 
+.move::after {transform: translateX(-30px);} 
