--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@ li,
 h1,
 h2,
 h3,
+h4,
 fieldset,
 input, 
 button, 
@@ -86,6 +87,12 @@ input::-webkit-inner-spin-button {
   margin: 0;
 }
 
+.headerBar {
+  display: flex; 
+  justify-content: flex-end;
+  width: 100%;
+}
+
 .add {
   background-color: #676aff; 
   font-size: 2rem; 
@@ -94,6 +101,36 @@ input::-webkit-inner-spin-button {
   height: 45px;
   margin-bottom: 10px; 
 }  
+
+.hide {
+  position: absolute;
+  margin: 0 auto;
+  display: inline-block;
+  bottom: -20px;
+  display: flex;
+  align-items: center;
+  left: 0;
+  right: 0;
+  background-color: white;
+  padding: 10px 15px;
+  border-radius: 20px;
+  box-shadow: 0px 5px 5px 2px rgba(173, 173, 173, 0.1);
+}
+
+.hide span { margin-right: 5px; }
+.hide svg { transform: scale(1.4); }
+
+.tableOptions {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  margin-top: 50px; 
+}
+
+h4 {
+  font-size: 2.2rem;
+  font-weight: 600; 
+} 
 
 .category { width: 50px; }
 
@@ -133,6 +170,7 @@ input::-webkit-inner-spin-button {
   text-align: center;  
   padding: 20px;
   margin-top: 10px; 
+  border-radius: 5px;  
 }
 
 .summary h2 {
