--- a/src/App.css
+++ b/src/App.css
@@ -106,26 +106,23 @@ input::-webkit-inner-spin-button {
   position: absolute;
   margin: 0 auto;
   display: inline-block;
-  bottom: -20px;
+  bottom: -30px;
   display: flex;
+  justify-content: center;
   align-items: center;
   left: 0;
   right: 0;
   background-color: white;
-  padding: 10px 15px;
-  border-radius: 20px;
+  height: 30px; 
+  width: 100px;
+  border-radius: 0 0 15px 15px; 
   box-shadow: 0px 5px 5px 2px rgba(173, 173, 173, 0.1);
 }
 
 .hide span { margin-right: 5px; }
-.hide svg { transform: scale(1.4); }
+.hide svg { transform: scale(1.4); }  
 
-.tableOptions {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
-  margin-top: 50px; 
-}
+.fieldset {display: flex;}
 
 h4 {
   font-size: 2.2rem;
@@ -153,7 +150,11 @@ h4 {
   font-size: 1.8rem;
   font-weight: 600;
 }
-.date {font-size: 1.4rem;}
+.date {
+  font-size: 1.4rem;
+  color: grey;
+}
+
 .price {
   font-size: 1.8rem;
   font-weight: 600;
