--- a/src/App.css
+++ b/src/App.css
@@ -59,6 +59,11 @@ h1, h2 {
   font-size: 2rem;
 }   
 
+h4 {
+  font-size: 2.2rem;
+  font-weight: 600; 
+}  
+
 /* Item Input Form Styles */
 input, select {
   font-family: inherit; 
@@ -112,13 +117,13 @@ input::-webkit-inner-spin-button {
   margin: 0;
 }
 
-.headerBar {
+.header__bar {
   display: flex; 
   justify-content: flex-end;
   width: 100%;
 }
 
-.add {
+.button__add {
   background-color: #676aff; 
   font-size: 2rem; 
   color: white;
@@ -127,7 +132,7 @@ input::-webkit-inner-spin-button {
   margin-bottom: 10px; 
 }  
 
-.hide {
+.button__hide {
   position: absolute;
   margin: 0 auto;
   display: inline-block;
@@ -144,19 +149,19 @@ input::-webkit-inner-spin-button {
   box-shadow: 0px 5px 5px 2px rgba(173, 173, 173, 0.1);
 }
 
-.hide span { margin-right: 5px; }
-.hide svg { transform: scale(1.4); }  
+.button__hide--labelled { margin-right: 5px; }
+.button__hide svg { transform: scale(1.4); }  
 
-.fieldset {display: flex;}
+.form__fieldset {display: flex;}
 
-h4 {
-  font-size: 2.2rem;
-  font-weight: 600; 
-}  
+.form__field {
+  position: relative;
+  display: inline-block;
+}
 
-.category { width: 50px; }
+.card__category { width: 50px; }
 
-.category div {
+.category__icon {
   border-radius: 50%;
   height: 40px;
   width: 40px;
@@ -167,51 +172,31 @@ h4 {
   background-color: #ececec;
 } 
 
-.category svg {
+.category__icon svg {
   transform: scale(1.4);
 } 
 
-.name {
-  font-size: 1.8rem;
-  font-weight: 600;
-}
-.date {
-  font-size: 1.4rem;
-  color: grey;
-}
-
-.price {
-  font-size: 1.8rem;
-  font-weight: 600; 
-}
-
-.itemCard {
+.card__content {
   display: flex;
   flex-direction: column;
   line-height: 2.2rem;
 }
 
-.summary {
+.card__name {
+  font-size: 1.8rem;
   font-weight: 600;
-  text-align: center;  
-  padding: 20px;
-  margin-top: 10px; 
-  border-radius: 5px;  
+}
+.card__date {
+  font-size: 1.4rem;
+  color: grey;
 }
 
-.summary h2 {
-  font-size: 1.6rem; 
-  margin-bottom: 5px;
+.card__price {
+  font-size: 1.8rem;
+  font-weight: 600; 
 }
 
-.summary span { 
-  color: #676aff;
-  font-size: 2.6rem;  
-}
-
-.hidden {visibility: hidden;}
-
-.checkbox {
+.checkbox__selection {
   height: 20px;
   width: 20px; 
   border: 1px solid grey;
@@ -220,7 +205,25 @@ h4 {
   display: block;
 } 
 
-.deleteButton { 
+.balance {
+  font-weight: 600;
+  text-align: center;  
+  padding: 20px;
+  margin-top: 10px; 
+  border-radius: 5px;  
+}
+
+.balance__label {
+  font-size: 1.6rem; 
+  margin-bottom: 5px;
+}
+
+.balance__value { 
+  color: #676aff;
+  font-size: 2.6rem;  
+} 
+
+.button__delete { 
   background-color: rgb(255, 94, 94); 
   color: black;
   padding: 4px 8px;
@@ -229,5 +232,7 @@ h4 {
   display: block;
 }
 
+.button__delete--hidden { display: hidden; }
+
 /* Light Mode/ Dark Mode Toggle */ 
-.move::after {transform: translateX(-30px);} 
+.toggle__theme--move::after {transform: translateX(-30px);} 
